# format-my-dissertation

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-07-09-cluster-margin-checking.md  2026-07-09-fullwidth-line-margin-checking.md  2026-07-09-scholarpress-ecosystem-migration.md  2026-07-09-synthetic-margin-test-suite.md
docs/superpowers/specs/: 2026-07-02-format-my-dissertation-design.md  2026-07-03-phase-5-dual-parser-design.md  2026-07-09-fullwidth-line-margin-checking-design.md  2026-07-09-scholarpress-ecosystem-architecture.md
rust-doc-service/: .dockerignore  Cargo.toml
rust-doc-service/fixtures/: minimal.docx
rust-doc-service/src/: error.rs  lib.rs
rust-doc-service/src/compile/: mod.rs  template.rs
rust-doc-service/src/extract/: chunker.rs  document.rs  heading_detector.rs  mod.rs
rust-doc-service/src/institutions/: mod.rs
rust-doc-service/src/routes/: compile.rs  institutions.rs  mod.rs  spec.rs  template.rs  validate.rs
rust-doc-service/src/validate/: mod.rs
