[package]
name = "doc-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
base64 = "0.22"
zip = "0.6"
quick-xml = "0.37"
pdf_oxide = "0.3"
roxmltree = "0.21"
regex = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart", "json"] }
